--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "colors/solarized"]
 	path = colors/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "plugins/endwise"]
+	path = plugin/endwise
+	url = https://github.com/tpope/vim-endwise.git
